# stslab-dev

./: .gitignore  README.md  mypy.ini  pyproject.toml
docs/: Documentation.md
src/stslab_dev/cli/: agent_group.py  checks_group.py  main.py  project_group.py
src/stslab_dev/cli/commands/: agent.py  build.py  checks.py  project.py
src/stslab_dev/cli/commands/templates/: .gitignore.tpl  README.md.tpl  check.py.tpl  conf.yaml.example.tpl  mypy.ini.tpl  pyproject.toml.tpl  stackstate.yaml.tpl  test_check.py.tpl
src/stslab_dev/test/mocks/: __init__.py  agent_check.py
tests/commands/: test_agent.py  test_build.py  test_checks.py  test_project.py
tests/resources/sample_project/: README.md  pyproject.toml
tests/resources/sample_project/src/sts_acme_checks/: acmecheck.py
tests/resources/sample_project/tests/resources/: stackstate.yaml
tests/resources/sample_project/tests/resources/conf.d/acmecheck.d/: conf.yaml
