[tool.poetry]
name = "stslab-dev"
version = "0.0.3"
description = "StsDev tool for the development of StackState Agent Integrations"
authors = ["Ravan Naidoo <rnaidoo@stackstate.com>"]

[tool.poetry.scripts]
stsdev = "stslab_dev.cli.main:main"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
plumbum = "^1.7.0"
python-dotenv = "^0.15.0"
requests = "^2.25.1"
stringcase = "^1.2.0"
flakehell = "^0.9.0"
mypy = "^0.812"
py-backwards = "^0.7"
isort = "^5.7.0"
black = "^20.8b1"
colorama = "^0.4.4"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "*", allow-prereleases = true }
typer-cli = "^0.0.12"
tox = "^3.22.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "integration",
]
norecursedirs = ["*resources*"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py37
[testenv]
whitelist_externals = poetry
commands =
    poetry install -vvv
    poetry run pytest
"""

[tool.flakehell]
exclude = ["README.rst", "README.md", ".eggs", ".tox", "build",".venv", "dist"]
include = ["src", "tests"]
format = "colored"
max_line_length = 120
show_source = true
# Temp fix until issue is fixed https://github.com/flakehell/flakehell/issues/10
extended_default_ignore=[]

[tool.flakehell.plugins]
"*" = [
    "+*",
    "-E203",
    ]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths=["src", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
