[tool.poetry]
name = "sts_acme_checks"
version = "0.1.0"
description = "my-custom-acme-checks Custom Checks"
authors = ["Your Name <your@email.address>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^3.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

